--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -10,6 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Quicksand:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Bitcount+Grid+Double:wght@100..900&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
 
 
 
@@ -67,7 +68,6 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
   }
 
 
@@ -75,14 +75,14 @@
   
 
   .container .signup__container{
-    height: 100%;
-    width: 50%;
+    height: 350px;
+    width: 350px;
     position: relative;
     background-color: var(--color-background);
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 210px;
     justify-content: center;
+    flex-direction: column;
 }
 
 
@@ -110,7 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
 .container .signup__container .logo img{
@@ -133,23 +133,24 @@
 }
 
 .container .signup__form .title h1{
-    font-size: 2.5rem;
-    font-family: 'Poppins';
+    font-size: 2rem;
+    font-family: 'Figtree';
     color: var(--color-blueDark);
     font-weight: 500;
 }
 
 .container .signup__form .title p{
-    font-size: 0.9rem;
-    font-family: 'Mona Sans';
+    font-size: 1rem;
+    font-family: 'Figtree';
     font-weight: 500;
+    text-align: center;
     color: var(--color-gray);
 }
 
 .inputs__container{
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 24px;
 }
 
 
@@ -161,7 +162,7 @@
 
 .inputs__container .input input{
     padding: 12px 16px;
-    border-radius: 6px;
+    border-radius: 12px;
     border: 1px solid rgba(0, 0, 0, .2);
     transition: 0.2s ease;
 }
