--- a/public/css/login.css
+++ b/public/css/login.css
@@ -47,11 +47,9 @@ body{
     width: 350px;
     height: 350px;
     display: flex;
+    margin-top: 80px;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
-    margin-top: 140px;
-    margin-bottom: 150px;
 
 }
 
@@ -73,6 +71,14 @@ body{
     font-family: 'Figtree';
     font-weight: 500;
     color: var(--color-blueDark);
+}
+
+.errDivContainer{
+    width: 100%;
+    padding: 12px 16px;
+    border: 2px solid var(--color-red);
+    background-color: rgba(255, 69, 0, 0.5);
+    color: var(--color-white);
 }
 
 .inputs__container{
@@ -143,7 +149,7 @@ body{
 
 .create__account{
     display: flex;
-    margin-top: 16px;
+    margin-top: 24px;
     align-items: center;
 }
 
