--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,6 +156,7 @@ body{
   font-size: 16px;
   background-color: var(--color-blueDark);
   color: white;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   border: none;
   padding: 8px 26px;
   border-radius: 12px;
@@ -168,6 +169,7 @@ body{
   background-color: var(--color-blueDark);
   color: white;
   padding: 8px 26px;
+  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   border-radius: 12px;
   border: none;
 }
@@ -636,13 +638,9 @@ body{
   font-weight: 500;
   width: 45%;
   background-color: var(--color-blueDark);
-  transition: .25s ease;
   box-shadow: inset 0 0 2px rgba(255,255,255,1);
 }
 
-.contact__btn:hover{
-  background-color: var(--color-gray);
-}
 
 
 
