--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -84,6 +84,18 @@
     flex-direction: column;
 }
 
+.errDivContainer{
+    width: 100%;
+    padding: 12px 16px;
+    border: 1px solid var(--color-red);
+    background-color: rgba(255, 69, 0, 0.55);
+    color: var(--color-white);
+    font-size: 1rem;
+    border-radius: 12px;
+    display: none;
+    font-family: 'Figtree';
+}
+
 
 .container .signup__container .login__link p{
     font-family: 'Mona Sans';
