--- a/public/css/login.css
+++ b/public/css/login.css
@@ -76,9 +76,13 @@ body{
 .errDivContainer{
     width: 100%;
     padding: 12px 16px;
-    border: 2px solid var(--color-red);
-    background-color: rgba(255, 69, 0, 0.5);
+    border: 1px solid var(--color-red);
+    background-color: rgba(255, 69, 0, 0.55);
     color: var(--color-white);
+    font-size: 1rem;
+    border-radius: 12px;
+    display: none;
+    font-family: 'Figtree';
 }
 
 .inputs__container{
