--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,6 +158,7 @@ body{
   color: white;
   box-shadow: inset 0 0 2px rgba(255,255,255,1);
   border: none;
+  font-weight: 500;
   padding: 8px 26px;
   border-radius: 12px;
 }
@@ -168,6 +169,7 @@ body{
   font-size: 16px;
   background-color: var(--color-blueDark);
   color: white;
+  font-weight: 500;
   padding: 8px 26px;
   box-shadow: inset 0 0 2px rgba(255,255,255,1);
   border-radius: 12px;
@@ -342,15 +344,15 @@ body{
   width: 750px;
   height: 350px;
   background-color: white;
-  border-radius: 16px;
-  border: 1px solid rgb(224, 224, 224);
+  border-radius: 12px;
+  
 }
 
 .box__container .box2{
   width: 700px;
-  border-radius: 16px;
+  border-radius: 12px;
   height: 350px;
-  border: 1px solid rgb(224, 224, 224);
+  
   background-color: white;
 }
 
@@ -359,15 +361,15 @@ body{
   width: 700px;
   height: 350px;
   background-color: white;
-  border-radius: 16px;
-  border: 1px solid rgb(224, 224, 224);
+  border-radius: 12px;
+  
 }
 
 .box__container .box4{
   width: 750px;
   background-color: white;
-  border: 1px solid rgb(224, 224, 224);
-  border-radius: 16px;
+  
+  border-radius: 12px;
   height: 350px;
 
 }
@@ -379,6 +381,8 @@ body{
   align-items: center;
   gap: 24px;
   overflow: hidden;
+  box-shadow: 3px 0 0 rgba(200,200,200,.2),
+              0 3px 0 rgba(200,200,200,.2);
 }
 
 .box .box__content{
@@ -392,43 +396,24 @@ body{
 }
 
 .box .box__content h1{
-  font-size:  38px;
+  font-size:  32px;
   font-family: 'Figtree';
   font-weight: 400;
 }
 
 .box .box__content p{
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-family: 'Figtree';
   font-weight: 500;
   color: var(--color-gray);
 }
 
-.box4{
+.box .box__img{
+  width: 50%;
   display: flex;
-  gap: 80px;
+  align-items: center;
+  justify-content: center;
 }
-
-.box2{
-  display: flex;
-  gap: 60px;
-}
-
-.box3{
-  display: flex;
-  gap: 80px;
-}
-
-.box1{
-  display: flex;
-  gap: 60px;
-}
-
-
-
-
-
-
 
 
 
@@ -664,7 +649,7 @@ body{
   }
 
   .box__container .box1{
-    width: 650px;
+    width: 600px;
   }
 
   .box__container .box2{
@@ -677,7 +662,7 @@ body{
   }
 
   .box__container .box4{
-    width: 650px;
+    width: 600px;
 
   }
 
