--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,7 +42,7 @@
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
   --box-shadow: 0 2px 4px 1px rgba(0, 0, 0, .3);
-  --color-background: hsl(0 0 97%);
+  --color-background: hsl(0 0 99%);
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -115,7 +115,7 @@ body{
 
 .info{
   display: flex;
-  gap: 48px;
+  gap: 36px;
   border-radius: 1.8em;
   z-index: inherit;
 }
@@ -381,8 +381,8 @@ body{
   align-items: center;
   gap: 24px;
   overflow: hidden;
-  box-shadow: 3px 0 0 rgba(200,200,200,.2),
-              0 3px 0 rgba(200,200,200,.2);
+  box-shadow: 3px 0 1px rgba(200,200,200,.2),
+              0 3px 1px rgba(200,200,200,.2);
 }
 
 .box .box__content{
