--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,7 +22,7 @@
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
   
-  --color-background: hsl(0 0 99%);
+  --color-background: hsl(0 0 100%);
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
   --color-success: var(--color-green);
@@ -63,11 +63,11 @@ body{
 }
 .login__container .logo img{
     height: auto;
-    width: 48px;
+    width: 36px;
 }
 
 .login__container .logo h1{
-    font-size: 2rem;
+    font-size: 1.65rem;
     font-family: 'Figtree';
     font-weight: 500;
     color: var(--color-blueDark);
@@ -105,7 +105,18 @@ body{
     width: inherit;
     padding: 12px 16px;
     border-radius: 12px;
-    border: 1px solid rgba(0,0,0,.2);
+    box-shadow: 0 3px 1px 0 rgba(150,150,150,.4),
+              1px 0 1px 0 rgba(150,150,150,.4),
+              -1px 0 1px 0 rgba(150,150,150,.4),
+              0 -1px 1px 0 rgba(150,150,150,.4);
+    border: none;
+}
+
+.input input::placeholder{
+    font-family: 'Figtree';
+    color: rgba(150,150,150,1);
+    font-size: 0.9rem;
+
 }
 
 
@@ -139,14 +150,18 @@ body{
 
 .btn__signin .btn{
     width: 100%;
-    padding: 14px 16px;
+    padding: 10px 10px;
     border: none;
     font-family: 'Mona Sans';
     border-radius: 12px;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 500;
     color: white;
-    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+        box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
+              1px 0 1px 0 hsla(270, 28%, 1%, 1),
+              -1px 0 1px 0 hsla(270, 28%, 1%, 1),
+              0 -1px 1px 0 hsla(270, 28%, 1%, 1);
+    cursor: pointer;
     background-color: var(--color-blueDark);
 }
 
