--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 
@@ -68,7 +69,7 @@ body{
 
 .login__container .logo h1{
     font-size: 1.65rem;
-    font-family: 'Figtree';
+    font-family: 'Urbanist', sans-serif;
     font-weight: 500;
     color: var(--color-blueDark);
 }
@@ -121,7 +122,7 @@ body{
 
 
 .input .input__label{
-    font-family: 'Mona Sans';
+    font-family: 'Figtree';
     font-weight: 600;
     font-size: 14px;
 }
@@ -157,7 +158,7 @@ body{
     font-size: 0.9rem;
     font-weight: 500;
     color: white;
-        box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
+    box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
               1px 0 1px 0 hsla(270, 28%, 1%, 1),
               -1px 0 1px 0 hsla(270, 28%, 1%, 1),
               0 -1px 1px 0 hsla(270, 28%, 1%, 1);
