--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -11,6 +11,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Quicksand:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Bitcount+Grid+Double:wght@100..900&family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Great+Vibes&family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Rajdhani:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 
@@ -145,7 +146,7 @@
 
 .container .signup__form .title h1{
     font-size: 1.65rem;
-    font-family: 'Figtree';
+    font-family: 'Urbanist', sans-serif;
     color: var(--color-blueDark);
     font-weight: 500;
 }
@@ -173,18 +174,26 @@
 
 .inputs__container .input input{
     padding: 12px 16px;
+    border: none;
     border-radius: 12px;
-    border: 1px solid rgba(0, 0, 0, .2);
-    transition: 0.2s ease;
+    box-shadow: 0 3px 1px 0 rgba(150,150,150,.4),
+              1px 0 1px 0 rgba(150,150,150,.4),
+              -1px 0 1px 0 rgba(150,150,150,.4),
+              0 -1px 1px 0 rgba(150,150,150,.4);
+
 }
 
-.inputs__container .input input:hover{
-    border:  1px solid rgba(0, 0, 0, .3);
+.inputs__container .input input::placeholder{
+    font-family: 'Figtree';
+    color: rgba(150,150,150,1);
+    font-size: 0.9rem;
 }
+
+
 
 
 .inputs__container .input label{
-    font-family: 'Mona Sans';
+    font-family: 'Figtree';
     font-weight: 600;
     font-size: 14px;
 
@@ -198,14 +207,19 @@
 
 .create__account .create__account__btn{
     width: 100%;
-    padding: 14px 16px;
+    padding: 10px 10px;
     border: none;
     background-color: var(--color-blueDark);
     color: var(--color-white);
-    font-size: 1rem;
-    font-family: 'Mona Sans';
+    font-size: 0.9rem;
+    font-family: 'Figtree';
     border-radius: 12px;
-    box-shadow: inset 0 0 2px rgba(255,255,255,1);
+    box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
+              1px 0 1px 0 hsla(270, 28%, 1%, 1),
+              -1px 0 1px 0 hsla(270, 28%, 1%, 1),
+              0 -1px 1px 0 hsla(270, 28%, 1%, 1);
+    cursor: pointer;
+
     font-weight: 500;
 }
 
