--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,10 +42,10 @@
   --color-green-aqua: #00EA9C;
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
-  --box-shadow: 0 3px 1px 0 rgba(150,150,150,.4),
-                3px 0 1px 0 rgba(150,150,150,.4),
-                -2.5px 0 1px 0 rgba(150,150,150,.4),
-                0 -2.5px 1px 0 rgba(150,150,150,.4);
+  --box-shadow: 0 2px 0 0 rgba(150,150,150,.6),
+                1px 0 0 0 rgba(150,150,150,.3),
+                -1px 0 0 0 rgba(150,150,150,.3),
+                0 -1px 0 0 rgba(150,150,150,.3);
   --color-background: hsl(0 0 100%);
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
@@ -67,9 +67,8 @@ body{
   padding: 0rem 272px;
   height: 64px;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  justify-self: center;
   align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
   position: fixed;
   background-color: var(--color-background);
   gap: 33px;
@@ -77,6 +76,8 @@ body{
   z-index: 999 !important;
   
 }
+
+
 
 .header__logo{
   display:flex;
@@ -125,23 +126,23 @@ body{
 }
 
 .info a{
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   font-size: 16px;
   font-weight: 500;
+  border-radius: 12px;
+  padding: 10px 10px;
   color: var(--color-blueDark);
   display: flex;
-  letter-spacing: -0.01em;
   align-items: center;
   position: relative;
   transition: 0.2s ease;
 }
 
-
 .info a:hover{
-  transform: translateY(-1px);
-  color: var(--color-gray);
-
+  background-color: rgba(150,150,150,.2);
 }
+
+
 
 
 
@@ -156,7 +157,7 @@ body{
 
 
 .register__section .btn__login{
-  font-family: 'Figtree';
+  font-family: 'Urbanist', sans-serif;
   font-size: 16px;
   background-color: var(--color-blueDark);
   color: white;
@@ -172,7 +173,7 @@ body{
 
 
 .register__section .btn__signup{
-  font-family: 'Figtree';
+  font-family: 'Urbanist', sans-serif;
   font-size: 16px;
   background-color: var(--color-blueDark);
   color: white;
@@ -229,7 +230,7 @@ body{
 
 .homepage .homepage__subtitle{
   font-size: 1.1rem;
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   font-weight: 400;
   color: var(--color-gray);
 }
@@ -245,13 +246,12 @@ body{
   background: var(--color-rose);
   color: var(--color-white);
   border: none;
-  box-shadow: inset 0 0 2px rgba(255,255,255,1);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   padding: 12px 24px;
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   color: var(--color-white);
   gap: 8px;
   box-shadow: 0 3px 1px 0 hsla(322, 100%, 60%, 1),
@@ -288,7 +288,7 @@ body{
 
 .features__header .features__title{
   font-size: 2.5rem;
-  font-family: 'Figtree', sans-serif;
+  font-family: 'Urbanist', sans-serif;
   color: var(--color-blueDark);
   font-weight: 400;
 }
@@ -310,17 +310,22 @@ body{
   border-radius: 16px;
   padding: 6px 10px;
   font-family: 'Figtree', sans-serif;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
   background-color: white;
-  box-shadow: 0 3px 1px 0 rgba(150,150,150,.4),
-              1px 0 1px 0 rgba(150,150,150,.4),
-              -1px 0 1px 0 rgba(150,150,150,.4),
-              0 -1px 1px 0 rgba(150,150,150,.4);
+  box-shadow: var(--box-shadow);
   font-weight: 500;
   color: var(--color-blueDark);
   z-index: -1;
-  
 }
+
+.features__header .features__label svg{
+  fill: var(--color-blueDark);
+  stroke: var(--color-blueDark);
+}
+
 
 
 
@@ -368,7 +373,7 @@ body{
 
 .box .box__content h1{
   font-size:  32px;
-  font-family: 'Figtree';
+  font-family: 'Urbanist';
   font-weight: 400;
 }
 
