--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -45,7 +45,10 @@
     --color-green-aqua: #00EA9C;
     --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
   
-    --box-shadow: 0 2px 4px 1px rgba(0, 0, 0, .3);
+    --box-shadow: 0 2px 0 0 rgba(150,150,150,.6),
+                1px 0 0 0 rgba(150,150,150,.3),
+                -1px 0 0 0 rgba(150,150,150,.3),
+                0 -1px 0 0 rgba(150,150,150,.3);
     --color-background: hsl(0 0 100%);
     --color-primary: var(--color-blue);
     --color-button: var(--color-yellow);
@@ -176,10 +179,7 @@
     padding: 12px 16px;
     border: none;
     border-radius: 12px;
-    box-shadow: 0 3px 1px 0 rgba(150,150,150,.4),
-              1px 0 1px 0 rgba(150,150,150,.4),
-              -1px 0 1px 0 rgba(150,150,150,.4),
-              0 -1px 1px 0 rgba(150,150,150,.4);
+    box-shadow: var(--box-shadow);
 
 }
 
