--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -45,10 +45,10 @@
     --color-green-aqua: #00EA9C;
     --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
   
-    --box-shadow: 0 2px 0 0 rgba(150,150,150,.6),
-                1px 0 0 0 rgba(150,150,150,.3),
-                -1px 0 0 0 rgba(150,150,150,.3),
-                0 -1px 0 0 rgba(150,150,150,.3);
+    --box-shadow: 0 1px 0 0 rgba(150,150,150,.4),
+                1px 0 0 0 rgba(150,150,150,.4),
+                -1px 0 0 0 rgba(150,150,150,.4),
+                0 -1px 0 0 rgba(150,150,150,.4);
     --color-background: hsl(0 0 100%);
     --color-primary: var(--color-blue);
     --color-button: var(--color-yellow);
@@ -97,12 +97,12 @@
     font-size: 1rem;
     border-radius: 12px;
     display: none;
-    font-family: 'Figtree';
+    font-family: 'Urbanist';
 }
 
 
 .container .signup__container .login__link p{
-    font-family: 'Mona Sans';
+    font-family: 'Urbanist';
     font-size: 400;
     font-size: 0.9rem;
     display: flex;
@@ -156,7 +156,7 @@
 
 .container .signup__form .title p{
     font-size: 1rem;
-    font-family: 'Figtree';
+    font-family: 'Urbanist', sans-serif;
     font-weight: 500;
     text-align: center;
     color: var(--color-gray);
@@ -184,7 +184,7 @@
 }
 
 .inputs__container .input input::placeholder{
-    font-family: 'Figtree';
+    font-family: 'Urbanist';
     color: rgba(150,150,150,1);
     font-size: 0.9rem;
 }
@@ -193,7 +193,7 @@
 
 
 .inputs__container .input label{
-    font-family: 'Figtree';
+    font-family: 'Urbanist';
     font-weight: 600;
     font-size: 14px;
 
@@ -212,14 +212,17 @@
     background-color: var(--color-blueDark);
     color: var(--color-white);
     font-size: 0.9rem;
-    font-family: 'Figtree';
+    font-family: 'Urbanist';
     border-radius: 12px;
     box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
               1px 0 1px 0 hsla(270, 28%, 1%, 1),
               -1px 0 1px 0 hsla(270, 28%, 1%, 1),
               0 -1px 1px 0 hsla(270, 28%, 1%, 1);
     cursor: pointer;
-
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    will-change: transform, opacity; 
     font-weight: 500;
 }
 
