--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,10 +22,10 @@
   --color-green-aqua: #00EA9C;
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
---box-shadow: 0 1px 0 0 rgba(150,150,150,.4),
-              1px 0 0 0 rgba(150,150,150,.4),
-             -1px 0 0 0 rgba(150,150,150,.4),
-              0 -1px 0 0 rgba(150,150,150,.4);
+--box-shadow: 0 2px 0 0 rgba(150,150,150,.3),
+              1px 0 0 0 rgba(150,150,150,.3),
+             -1px 0 0 0 rgba(150,150,150,.3),
+              0 -1px 0 0 rgba(150,150,150,.3);
   --color-background: hsl(0 0 100%);
   --color-primary: var(--color-blue);
   --color-button: var(--color-yellow);
@@ -62,7 +62,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 8px;
     margin-bottom: 24px;
 }
 .login__container .logo img{
@@ -71,10 +71,17 @@ body{
 }
 
 .login__container .logo h1{
-    font-size: 1.65rem;
+    font-size: 1.8rem;
     font-family: 'Urbanist', sans-serif;
     font-weight: 500;
     color: var(--color-blueDark);
+}
+
+.login__container .logo p{
+    font-size: 0.9rem;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 400;
+    color: var(--color-gray);
 }
 
 .errDivContainer{
@@ -116,15 +123,15 @@ body{
 .input input::placeholder{
     font-family: 'Urbanist';
     color: rgba(150,150,150,1);
-    font-size: 0.9rem;
+    font-size: 0.85rem;
 
 }
 
 
 .input .input__label{
     font-family: 'Urbanist';
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 500;
+    font-size: 13.5px;
 }
 
 .input2 .input__label{
@@ -144,7 +151,7 @@ body{
 }
 
 .btn__signin{
-    margin-top: 8px;
+    margin-top: 6px;
     width: 100%;
 
 }
