--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,7 +41,7 @@
   --color-green-aqua: #00EA9C;
   --color-electric-yellow: linear-gradient(90deg, #FFF700, #FFD000, #FFB300);
 
-  --box-shadow: 0 2px 0 0 rgba(150,150,150,.6),
+  --box-shadow: 0 2px 0 0 rgba(150,150,150,.4),
                 1px 0 0 0 rgba(150,150,150,.3),
                 -1px 0 0 0 rgba(150,150,150,.3),
                 0 -1px 0 0 rgba(150,150,150,.3);
@@ -94,7 +94,7 @@ body{
 
 
 .header__logo .header__title a{
-  font-size: 2rem;
+  font-size: 2.3rem;
   font-weight: 500;
   background: linear-gradient(70deg, var(--color-blue),var(--color-blue2));
   font-family: 'Dancing Script', sans-serif;
@@ -173,7 +173,7 @@ body{
 
 .register__section .btn__login{
   font-family: 'Urbanist', sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   background-color: var(--color-blueDark);
   color: white;
   box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
@@ -193,12 +193,12 @@ body{
 
 .register__section .btn__signup{
   font-family: 'Urbanist', sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
   background-color: var(--color-blueDark);
   color: white;
   font-weight: 500;
   padding: 8px 26px;
-    box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
+  box-shadow: 0 3px 1px 0 hsla(270, 28%, 1%, 1),
               1px 0 1px 0 hsla(270, 28%, 1%, 1),
               -1px 0 1px 0 hsla(270, 28%, 1%, 1),
               0 -1px 1px 0 hsla(270, 28%, 1%, 1);
@@ -236,12 +236,12 @@ body{
 }
 
 .homepage .homepage__title{
-  display: inline-block;
+  display: flex;
+  gap: 12px;
   gap: 8px;
-  visibility: hidden;
 }
 
-.homepage .homepage__title span{
+.homepage .homepage__title .letter{
   font-size: 3.5rem;
   font-family: 'Urbanist', sans-serif;
   font-weight: 400;
@@ -337,7 +337,7 @@ body{
 }
 
 .features__header .features__label{
-  font-size: 16px;
+  font-size: 15px;
   border-radius: 16px;
   padding: 6px 10px;
   font-family: 'Urbanist', sans-serif;
@@ -409,10 +409,10 @@ body{
 }
 
 .box .box__content p{
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: 'Urbanist', sans-serif;
   text-align: left;
-  font-weight: 500;
+  font-weight: 400;
   color: var(--color-gray);
 }
 
